Update README.md
Added run Configurations