@@ -1,2 +1,9 @@
 # registration-client-1.2
 1.2.0.1-B2 
+
+
+**Run Configurations for Fayda Staging Enviroment**
+
+- JDK/JRE : Java 11 (11.0.18 woks best)
+- CLI Arguments (Make sure the path for Java Fx is correct on your machine) : --module-path "C:\Program Files\Java\javafx-sdk-11\lib" --add-modules javafx.controls,javafx.fxml,javafx.base,javafx.graphics,javafx.media,javafx.swing,javafx.web,javafx.swt --add-modules javafx.base,javafx.graphics --add-reads javafx.base=ALL-UNNAMED --add-reads javafx.graphics=ALL-UNNAMED  --add-exports javafx.graphics/com.sun.javafx.print=ALL-UNNAMED
+- Main Class : io.mosip.registration.controller.Initialization
